# bhoomi-suraksha

./: .dockerignore  .env.example  .gitignore  Dockerfile  PropVerify_AI_Roadmap (1).docx  docker-compose.yml  docker_interview_guide.txt  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: config.py  database.py  main.py
app/api/: auth.py  documents.py  health.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: entity_extractor.py  narration_service.py  ocr_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/auth/: auth.module.css
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/blog/: blog.module.css  page.tsx
frontend/app/blog/[slug]/: page.tsx
frontend/app/dashboard/: dashboard.module.css  page.tsx
frontend/app/document/[id]/: page.tsx
frontend/lib/: api.ts  blog.ts
tests/: test_pipeline_e2e.py
